@@ -1,6 +1,6 @@
 # Vend::Table::Shadow - Access a virtual "Shadow" table
 #
-# $Id: Shadow.pm,v 1.36 2003-05-01 22:27:42 racke Exp $
+# $Id: Shadow.pm,v 1.37 2003-05-22 13:40:45 racke Exp $
 #
 # Copyright (C) 2002-2003 Stefan Hornburg (Racke) <racke@linuxia.de>
 #
@@ -20,12 +20,12 @@
 # MA  02111-1307  USA.
 
 package Vend::Table::Shadow;
-$VERSION = substr(q$Revision: 1.36 $, 10);
+$VERSION = substr(q$Revision: 1.37 $, 10);
 
-# TODO
+# CREDITS
 #
-# Config.pm:
-# - check MAP to avoid mapping the key
+# Thanks to Andreas Jacob <wabi@gmx.net> for initial funding
+# and continuous bug reports.
 
 use strict;
 
@@ -125,6 +125,12 @@ sub numeric {
 	$s = $s->import_db() unless defined $s->[$OBJ];
 	my ($orig_db, $orig_col) = $s->_map_field($column);
 	return $orig_db->numeric($orig_col);
+}
+
+sub inc_field {
+	my ($s, $key, $column, $value) = @_;
+	$s = $s->import_db() unless defined $s->[$OBJ];
+	return $s->[$OBJ]->inc_field($key, $column, $value);
 }
 
 sub column_index {
